--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 
                     <div>
                         <!-- <a href="https://lautenschlager.de">www.hiboocreation.com</a> -->
-                        <a href="#">www.hiboocreation.com</a>
+                        <a href="index.html">www.hiboocreation.com</a>
                         <br/>
                         <a href="mailto:hiboocreation@houtlook.com">hiboocreation@houtlook.com</a>
                     </div>
