--- a/Services.html
+++ b/Services.html
@@ -154,7 +154,7 @@
                             <li><a href="Services.html#AncreversCommunication">Communication</a></li>
                         </ul>
                     </li>
-                    <li><a href="Réalisation.html">Réalisation</a></li>
+                    <li><a href="Réalisation.html">Réalisations</a></li>
                     <li><a href="contact.html">Nous joindre</a></li>
                 </ul>
             </nav>
@@ -420,9 +420,7 @@
                     </div>
                     <div>
                         <address class="margin-bottom-1">
-                            <p>Riviéra palmeraie<br/>
-                            Abidjan Cocody<br/>
-                            Cote d'Ivoire</p>
+                            <p>Abidjan - Cocody ,<br/>Riviéra palmeraie<br/></p>
                         </address>
                     </div>
                     <div class="margin-bottom-1">
@@ -434,7 +432,7 @@
                     <div>
                         <a href="index.html">www.hiboocreation.com</a>
                         <br/>
-                        <a href="mailto:info@lautenschlager.de">hiboocreation@houtlook.com</a>
+                        <a href="mailto:info@lautenschlager.de">hiboocreation@outlook.com</a>
                     </div>
                 </div>
                 <div class="col-md-5 footer-menu" style="margin-top:34px">
@@ -458,6 +456,8 @@
     <footer class="page-section-no-padding  footer2-container">
         <div class="container">
             <div class="row">
+                <h4 class="" style="color: #fff;">Hiboo creation – Tous droits reservés 
+                </h4>
             </div>
         </div>
     </footer>
