--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
                             <li><a href="Services.html#AncreversCommunication">Communication</a></li>
                         </ul>
                     </li>
-                    <li><a href="Réalisation.html">Réalisation</a></li>
+                    <li><a href="Réalisation.html">Réalisations</a></li>
                     <li class="active"><a href="contact.html">Nous joindre</a></li>
                 </ul>
             </nav>
@@ -112,7 +112,7 @@
                 <div class="col-md-12 text-center">
                     <h1 class="title-section"><span class="title-regular"><strong>Tél:</strong> <strong>+ 225 07 02 93 41 27</strong></span></h1>
                     <hr class="title-underline-center">
-                    <p class="lead"><strong>E-mail:</strong> <strong><a href="mailto:hiboocreation@houtlook.com">hiboocreation@houtlook.com</a></strong></p>
+                    <p class="lead"><strong>E-mail:</strong> <strong><a href="mailto:hiboocreation@houtlook.com">hiboocreation@outlook.com</a></strong></p>
                 </div>
             </div>
         </div>
@@ -131,9 +131,7 @@
                     </div>
                     <div>
                         <address class="margin-bottom-1">
-                            <p>Riviéra palmeraie<br/>
-                            Abidjan Cocody<br/>
-                            Cote d'Ivoire</p>
+                            <p>Abidjan - Cocody ,<br/>Riviéra palmeraie<br/></p>>
                         </address>
                     </div>
                     <div class="margin-bottom-1">
@@ -169,6 +167,8 @@
     <footer class="page-section-no-padding  footer2-container">
         <div class="container">
             <div class="row">
+                <h4 class="" style="color: #fff;">Hiboo creation – Tous droits reservés 
+                </h4>
             </div>
         </div>
     </footer>
