--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
      <style type="text/css">
 
         #slider{
-            width:99.99%;
-            height:auto;
+            width:100%;
+            height: auto;
             margin: 0 auto;
             overflow: hidden;
         }
         .slides{
            display:block;
-           width:1100%;
+           width:1000%;
            height: auto;
            margin:0;
            padding:0;
@@ -104,6 +104,9 @@
            border:1px solid #7a7c82;
         } */
 
+        .hero-header .intro-text
+        {padding-top:100px!important;padding-bottom:70px!important}
+
     </style>
 
 </head>
@@ -137,7 +140,7 @@
                             <li><a href="Services.html#AncreversCommunication">Communication</a></li>
                         </ul>
                     </li>
-                    <li><a href="Réalisation.html">Réalisation</a></li>
+                    <li><a href="Réalisation.html">Réalisations</a></li>
                     <li><a href="contact.html">Nous joindre</a></li>
                 </ul>
             </nav>
@@ -151,67 +154,67 @@
     <div id="slider">
         <div class="slides">
             <div class="slide">
-                <header class="hero-header" style="background-image: url(img/GRAPHISME/photo1.jpeg);">
+                <header class="hero-header" style="background-image: url(img/GRAPHISME/photo1.png);">
                     <div class="container">
                         <div class="intro-text" style="text-align:center;">
-                            <div class="intro-lead-in">Welcome To HIBOO!</div>
-                            <div class="intro-heading" style="color:#FF5800;">GRAPHISME</div>
-                            <a href="Services.html#AncreversGraphisme" class="btn btn-primary btn-lg">En savoir plus</a>
+                            <div class="intro-lead-in">Welcome To HIBOO !</div>
+                            <div class="intro-heading" style="color:#FF5800; font-size:60px!important;">GRAPHISME</div>
+                            <a href="Services.html#AncreversGraphisme" class="btn btn-primary btn-xm">En savoir plus</a>
                         </div>
                     </div>
                 </header>
             </div>
             <div class="slide">
-                <header class="hero-header" style="background-image: url(img/WEBDISIGN/photo5.jpeg);">
+                <header class="hero-header" style="background-image: url(img/WEBDISIGN/photo5.png);">
                     <div class="container">
                         <div class="intro-text" style="text-align:center;">
-                            <div class="intro-lead-in">Welcome To HIBOO!</div>
+                            <div class="intro-lead-in">Welcome To HIBOO !</div>
                             <div class="intro-heading"style="color:#FF5800">WEB DESIGN</div>
-                            <a href="Services.html#AncreversWebdesign" class="btn btn-primary btn-lg">En savoir plus</a>
+                            <a href="Services.html#AncreversWebdesign" class="btn btn-primary btn-xm">En savoir plus</a>
                         </div>
                     </div>
                 </header>
             </div>
             <div class="slide">
-                <header class="hero-header" style="background-image: url(img/DIGITAL/photo3.jpeg);">
+                <header class="hero-header" style="background-image: url(img/DIGITAL/photo3.png);">
                     <div class="container">
                         <div class="intro-text" style="text-align:center;">
-                            <div class="intro-lead-in">Welcome To HIBOO!</div>
+                            <div class="intro-lead-in">Welcome To HIBOO !</div>
                             <div class="intro-heading"style="color">DIGITAL</div>
-                            <a href="Services.html#AncreversDigital" class="btn btn-primary btn-lg">En savoir plus</a>
+                            <a href="Services.html#AncreversDigital" class="btn btn-primary btn-xm">En savoir plus</a>
                         </div>
                     </div>
                 </header>
             </div>
             <div class="slide">
-                <header class="hero-header" style="background-image: url(img/AUDIOVISUEL/photo9.jpg);">
+                <header class="hero-header" style="background-image: url(img/AUDIOVISUEL/photo9.png);">
                     <div class="container">
                         <div class="intro-text" style="text-align:center;">
-                            <div class="intro-lead-in">Welcome To HIBOO!</div>
+                            <div class="intro-lead-in">Welcome To HIBOO !</div>
                             <div class="intro-heading"style="color">AUDIOVISUEL</div>
-                            <a href="Services.html#AncreversAudiovisuel" class="btn btn-primary btn-lg">En savoir plus</a>
+                            <a href="Services.html#AncreversAudiovisuel" class="btn btn-primary btn-xm">En savoir plus</a>
                         </div>
                     </div>
                 </header>   
             </div>
             <div class="slide">
-                <header class="hero-header" style="background-image: url(img/COMMUNICATION/photo12.jpeg);">
+                <header class="hero-header" style="background-image: url(img/COMMUNICATION/photo12.png);">
                     <div class="container">
                         <div class="intro-text" style="text-align:center;">
-                            <div class="intro-lead-in">Welcome To HIBOO!</div>
+                            <div class="intro-lead-in">Welcome To HIBOO !</div>
                             <div class="intro-heading"style="color:#FF5800">COMMUNICATION</div>
-                            <a href="Services.html#AncreversCommunication" class="btn btn-primary btn-lg">En savoir plus</a>
+                            <a href="Services.html#AncreversCommunication" class="btn btn-primary btn-xm">En savoir plus</a>
                         </div>
                     </div>
                 </header>
             </div>
             <div class="slide">
-                <header class="hero-header" style="background-image: url(img/GRAPHISME/photo1.jpeg);">
+                <header class="hero-header" style="background-image: url(img/GRAPHISME/photo1.png);">
                     <div class="container" style="text-align:center;">
                         <div class="intro-text">
-                            <div class="intro-lead-in">Welcome To HIBOO!</div>
+                            <div class="intro-lead-in">Welcome To HIBOO !</div>
                             <div class="intro-heading"style="color:#FF5800">GRAPHISME</div>
-                            <a href="#intro" class="btn btn-primary btn-lg">En savoir plus</a>
+                            <a href="#intro" class="btn btn-primary btn-xm">En savoir plus</a>
                         </div>
                     </div>
                 </header>
@@ -222,7 +225,7 @@
                     <div class="intro-text">
                         <div class="intro-lead-in">Welcome To Elsa!</div>
                         <div class="intro-heading">A beautiful and clean HTML template</div>
-                        <a href="#intro" class="btn btn-primary btn-lg">See More</a>
+                        <a href="#intro" class="btn btn-primary btn-xm">See More</a>
                     </div>
                 </div>
             </header>
@@ -232,7 +235,7 @@
                     <div class="intro-text">
                         <div class="intro-lead-in">Welcome To Elsa!</div>
                         <div class="intro-heading">A beautiful and clean HTML template</div>
-                        <a href="#intro" class="btn btn-primary btn-lg">See More</a>
+                        <a href="#intro" class="btn btn-primary btn-xm">See More</a>
                     </div>
                 </div>
             </header>
@@ -242,7 +245,7 @@
                     <div class="intro-text">
                         <div class="intro-lead-in">Welcome To Elsa!</div>
                         <div class="intro-heading">A beautiful and clean HTML template</div>
-                        <a href="#intro" class="btn btn-primary btn-lg">See More</a>
+                        <a href="#intro" class="btn btn-primary btn-xm">See More</a>
                     </div>
                 </div>
             </header>
@@ -252,10 +255,10 @@
                     <div class="intro-text">
                         <div class="intro-lead-in">Welcome To Elsa!</div>
                         <div class="intro-heading">A beautiful and clean HTML template</div>
-                        <a href="#intro" class="btn btn-primary btn-lg">See More</a>
+                        <a href="#intro" class="btn btn-primary btn-xm">See More</a>
                     </div>
                 </div>
-            </header>-->
+            </header> -->
         </div>
     </div>
 
@@ -264,18 +267,6 @@
     <div class="sec-alternative" style="background-image: url(img/odd_background.png)">
         <div class="container cta">
             <div class="row">
-                <div class="col-md-8">
-                   <!--<p>
-                        This could be your <span>Website</span>
-                        <br/>
-                        <span>Check out all layouts and features</span>
-                    </p>-->
-                </div>
-                <div class="col-md-4">
-                   <!--<div class="cta-button">
-                        <a href="#demos" class="btn btn-primary">Buy Theme for 10$</a> <span><a href="#">or see more</a></span>
-                    </div-->
-                </div>
             </div>
         </div>
     </div>
@@ -288,61 +279,111 @@
         <div class="container intro">
             <div class="row margin-bottom-50">
                 <div class="col-md-12 text-center">
-                    <h1 class="title-section"><span class="title-regular">HIBOO <strong>CREATION</strong></span><br/>PRESENTATION</h1>
+                    <h1 class="title-section"><span class="title-regular"><strong>HIBOO</strong> CREATION</span><br/>PRESENTATION</h1>
                     <hr class="title-underline-center">
-                    <p class="lead"><strong>HIBOO CREATION</strong> est une structure spécialisée dans <br>le Graphisme, Web design, Digital, Audiovisuel et la Communication. <br> Nous vous proposons des services de qualité sous toutes ses formes,<br> en vous accompagnant sur les phases de conception, réalisation et de diffusion.</p>
+                    <p class="lead"><strong>HIBOO CREATION</strong> est une structure spécialisée dans 
+                        <br>le Graphisme, Web design, Digital, Audiovisuel et la Communication. 
+                        <br> Nous vous proposons des services de qualité sous toutes ses formes,
+                        <br> en vous accompagnant sur les phases de conception, réalisation et de diffusion.</p>
                 </div>
             </div>
-            <div class="row text-center">
-                <div>
-                    <div class="col-md-3 col-sm-6">
+            <div class="container text-center">
+                <div class="row col-md-offset-1">
+                    <div class="col-md-2 col-sm-6">
                         <div class="effet">
                             <i class="fa fa-code icondesign"></i>
                             <label>
                                 <!-- <strong>2543</strong> -->
                                 <br/>Web design</label>
-                            <p>Creation de site web dynamique et responsive, gestion de site web, hébergement web</p>
+                                <dl>
+                                    <dd>Creation de site web dynamique et responsive</dd>
+                                    <dd>gestion de site web</dd>
+                                    <dd>hébergement web</dd>
+                                </dl>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-2 col-sm-6">
                         <div class="effet">
                             <i class="fa fa-bullseye icondesign"></i>
                             <label>
                                 <!-- <strong>14489</strong> -->
                                 <br/>Digital</label>
-                            <p> Branding de pages réseaux sociaux, stratégie digitale, social media manager, community management</p>
+                            <dl>
+                                <dd>Branding de pages réseaux sociaux</dd>
+                                <dd>stratégie digitale</dd>
+                                <dd>social media manager</dd>
+                                <dd>community management</dd>
+                            </dl>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-2 col-sm-6">
                         <div class="effet">
                             <i class="fa fa-camera icondesign"></i>
                             <label>
                                 <!-- <strong>21</strong> -->
                                 <br/>Audiovisuel</label>
-                            <p>Film publicitaire et institutionnel, spot publicitaire, reportage, motion design, documentaire, voix off, photographie</p>
+                            <dl>
+                                <dd>Film publicitaire et institutionnel</dd>
+                                <dd>spot publicitaire</dd>
+                                <dd>reportage</dd>
+                                <dd>motion design</dd>
+                                <dd>documentaire</dd>
+                                <dd>voix off</dd>
+                                <dd>photographie</dd>
+                            </dl>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-2 col-sm-6">
                         <div class="effet">
                             <i class="fa fa-pencil icondesign"></i>
                             <label>
                                 <!-- <strong>14</strong> -->
                                 <br/>Graphisme</label>
-                            <p>Logotypes, chartes graphiques, cartes de visites, affiches, flyers, brochures, plaquettes commerciales, catalogues et magazines</p>
+                            <dl>
+                                <dd>Logotypes</dd>
+                                <dd>chartes graphiques</dd>
+                                <dd>cartes de visites</dd>
+                                <dd>affiches</dd>
+                                <dd>flyers</dd>
+                                <dd>brochures</dd>
+                                <dd>plaquettes commerciales</dd>
+                                <dd>catalogues et magazines</dd>
+                            </dl>
                         </div>
                     </div> 
-                    <div class="col-md-3 col-sm-6 col-md-push-4" style="margin-top:20px">
+                    <div class="col-md-2 col-sm-6 ">
                         <div class="effet">
                             <i class="fa fa-desktop icondesign"></i>
                             <label>
                                 <br/>Communication</label>
-                            <p>Stratégie de marque, média planning,<br> affichage, stratégie de communication, <br>plan de communication</p>
+                            <dl>
+                                <dd>Stratégie de marque</dd>
+                                <dd>média planning</dd>
+                                <dd>affichage</dd>
+                                <dd>stratégie de communication</dd>
+                                <dd>plan de communication</dd>
+                            </dl>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <div class="sec-alternative" style="background-image: url(img/odd_background.png)">
+        <div class="container cta">
+            <div class="row">
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container">
+        <div class="row margin-bottom-30">
+           
+
+        </div>
+    </div>
 
 
 
@@ -376,9 +417,7 @@
                     </div>
                     <div>
                         <address class="margin-bottom-1">
-                            <p>Riviéra palmeraie<br/>
-                            Abidjan Cocody<br/>
-                            Cote d'Ivoire</p>
+                            <p>Abidjan - Cocody ,<br/>Riviéra palmeraie<br/></p>
                         </address>
                     </div>
                     <div class="margin-bottom-1">
@@ -391,7 +430,7 @@
                         <!-- <a href="https://lautenschlager.de">www.hiboocreation.com</a> -->
                         <a href="index.html">www.hiboocreation.com</a>
                         <br/>
-                        <a href="mailto:hiboocreation@houtlook.com">hiboocreation@houtlook.com</a>
+                        <a href="mailto:hiboocreation@houtlook.com">hiboocreation@outlook.com</a>
                     </div>
                 </div>
                 <div class="col-md-5 footer-menu" style="margin-top:34px">
@@ -415,6 +454,8 @@
     <footer class="page-section-no-padding  footer2-container">
         <div class="container">
             <div class="row">
+                <h4 class="" style="color: #fff;">Hiboo creation – Tous droits reservés 
+                </h4>
             </div>
         </div>
     </footer>
@@ -467,12 +508,12 @@
         var currentSlide = 1 ;
         var $slider = $(".slides");
         var slideCount = $slider.children().length;
-        var slideTime = 3500;
+        var slideTime = 6250;
         var animationTime = 900;
 
         setInterval(function() {
             $slider.animate({
-                marginLeft: '-=110%'
+                marginLeft: '-=100%'
             } , animationTime , function() {
                 currentSlide++;
                 if (currentSlide === slideCount) {
